Added Plane logo

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<h1>Coming soon...Le Wagon</h1>
+
 </head>
 <body>
-
+	<img src="noun plane.png" alt="">
+	<h1>Coming soon...Le Wagon</h1>
 </body>
 </html>
