--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<img src="noun plane.png" alt="">
+	<div id="container">
+	<img id="logo" img src="noun plane.png" alt="">
 	<h1>Coming soon...Le Wagon</h1>
+</div>
 </body>
 </html>
